new post: reduce function

--- a/content/Higher-level functions in Python, Part 1 - map.ipynb
+++ b/content/Higher-level functions in Python, Part 1 - map.ipynb
@@ -13,7 +13,9 @@
     "* lambda\n",
     "* list comprehensions\n",
     "\n",
-    "In this notebook, we'll learn more about the `map` Python function. I will assume you already know about list expressions, but might not be so familiar with the other four.\n",
+    "<div align=\"right\">*Picture from [SwiftUnboxed](https://swiftunboxed.com/open-source/map/)*</div>\n",
+    "\n",
+    "This article series focuses on exploring these. In this notebook, we'll learn more about the `map` Python function. I will assume you already know about list expressions, but might not be so familiar with the other four.\n",
     "\n",
     "At first glance `map` seems a bit redundant &mdash; all it does is apply a function to every member in an iterable (list, dict, tuple, set, etc.)? Playing with it though, we'll see that it can be used to tidy up your code, make it more readable, and even give performance gains when used with very large iterables due to its lazy evaluation."
    ]
@@ -1086,7 +1088,10 @@
     "When tuning for performance,\n",
     "\n",
     "1. Switch to `map` instead of list comprehensions for iterables with around a million items or more.\n",
-    "2. Unless you really can't use numpy, use `n * n * ...` instead of `n**k`, for `k` in `[2, 4]`"
+    "2. Unless you really can't use numpy, use `n * n * ...` instead of `n**k`, for `k` in `[2, 4]`\n",
+    "\n",
+    "## Keep on reading!\n",
+    "Next in the *Higher-level functions in Python* series we'll take a look at [the `reduce` function](higher-level-functions-python-reduce.html)."
    ]
   }
  ],
