fixed HTML wonkiness

--- a/content/Higher-level functions in Python, Part 1 - map.ipynb
+++ b/content/Higher-level functions in Python, Part 1 - map.ipynb
@@ -13,7 +13,7 @@
     "* lambda\n",
     "* list comprehensions\n",
     "\n",
-    "<div align=\"right\">*Picture from [SwiftUnboxed](https://swiftunboxed.com/open-source/map/)*</div>\n",
+    "<div align=\"right\"><i>Picture from <a href=\"https://swiftunboxed.com/open-source/map\">SwiftUnboxed</a></i></div>\n",
     "\n",
     "This article series focuses on exploring these. In this notebook, we'll learn more about the `map` Python function. I will assume you already know about list expressions, but might not be so familiar with the other four.\n",
     "\n",
@@ -876,7 +876,7 @@
    "source": [
     "def exponent_1(n, k):\n",
     "    \"\"\"Returns n (* n)... k-1 times\"\"\"\n",
-    "    # This is super fugly but I don't know how to code it\n",
+    "    # This is pretty ugly but I don't know how to code it\n",
     "    # without eval(), which is super slow.\n",
     "    if k == 1:\n",
     "        return n\n",
