--- a/content/Higher-level functions in Python, Part 2 - reduce.ipynb
+++ b/content/Higher-level functions in Python, Part 2 - reduce.ipynb
@@ -13,7 +13,7 @@
     "* lambda\n",
     "* list comprehensions\n",
     "\n",
-    "<div align=\"right\">*Picture from [SwiftUnboxed](https://swiftunboxed.com/lang/reduce/)*</div>\n",
+    "<div align=\"right\"><i>Picture from <a href=\"https://swiftunboxed.com/lang/reduce\">SwiftUnboxed</a></i></div>\n",
     "\n",
     "This article series focuses on exploring these. In the previous article we've taken a look at [the `map` function](higher-level-functions-python-map.html). In this notebook, we'll learn more about the `reduce` function in Python. Again, I will assume you already know about list expressions, (or more broadly, [generator expressions](https://nedbatchelder.com/blog/201605/generator_comprehensions.html)). Just like I got side-tracked exploring exponential function syntax in the previous installment, this time we'll spend some time learning about function composition, and benchmarking various ways of working with function call chains in Python.\n",
     "\n",
@@ -1167,8 +1167,8 @@
     "1. The number of functions to apply in the chain are high enough to become unreadable, or\n",
     "2. You won't know in advance which functions to apply, and need a way to abstract it away.\n",
     "\n",
-    "<img title=\"Genetic Algorithm\" src=\"img/genetic_algo.svg\" width=\"400\" align=\"center\">\n",
-    "<div align=\"center\">*Courtesy of [CoalHMM Documentation](https://github.com/birc-aeh/coalhmm)*</div>\n",
+    "<center><img title=\"Genetic Algorithm\" src=\"img/genetic_algo.svg\" width=\"400\">\n",
+    "***Genetic Algoriths***<br>*Courtesy of [CoalHMM Documentation](https://github.com/birc-aeh/coalhmm)*</center>\n",
     "\n",
     "One example of this last case that comes to mind is if you were running a genetic algorithm experiment to evolve a solution to a problem that uses function composition.\n",
     "\n",
