--- a/content/Higher-level functions in Python, Part 2 - reduce.ipynb
+++ b/content/Higher-level functions in Python, Part 2 - reduce.ipynb
@@ -1337,7 +1337,7 @@
     "2. You won't know in advance which functions to apply, and need a way to abstract it away.\n",
     "\n",
     "<center><img title=\"Genetic Algorithm\" src=\"img/genetic_algo.svg\" width=\"400\">\n",
-    "***Genetic Algoriths***<br>*Courtesy of [CoalHMM Documentation](https://github.com/birc-aeh/coalhmm)*</center>\n",
+    "<i><b>Genetic Algoriths</b><br>Courtesy of [CoalHMM Documentation](https://github.com/birc-aeh/coalhmm)</i></center>\n",
     "\n",
     "One example of this last case that comes to mind is if you were running a genetic algorithm experiment to evolve a solution to a problem that uses function composition.\n",
     "\n",
