--- a/content/Higher-level functions in Python, Part 3 - filter.ipynb
+++ b/content/Higher-level functions in Python, Part 3 - filter.ipynb
@@ -15,9 +15,7 @@
     "\n",
     "<div align=\"right\"><i>Picture from <a href=\"https://netflix.github.io/\">Netflix OSS</a></i></div>\n",
     "\n",
-    "This article series focuses on exploring these. In the previous article we've taken a look at [the `map`](higher-level-functions-python-map.html) and [`reduce`](higher-level-functions-python-reduce) functions. In this notebook, we'll learn more about the `filter` function in Python. Again, I will assume you already know about list expressions, (or more broadly, [generator expressions](https://nedbatchelder.com/blog/201605/generator_comprehensions.html)).\n",
-    "\n",
-    "Just like I got side-tracked exploring exponential function syntax in the previous installment, this time we'll spend some time learning about function composition, and benchmarking various ways of working with function call chains in Python."
+    "This article series focuses on exploring these. In the previous article we've taken a look at the [`map`](higher-level-functions-python-map.html) and [`reduce`](higher-level-functions-python-reduce) functions, that take other functions as arguments. In this notebook, we'll learn more about the `filter` function in Python. Again, I will assume you already know about list expressions, (or more broadly, [generator expressions](https://nedbatchelder.com/blog/201605/generator_comprehensions.html))."
    ]
   },
   {
@@ -220,10 +218,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Like generator expressions, `map` and `reduce`, we need to wrap `filter` with a call to `list()` in order to \"consume\" the items in the generator. Otherwise they stay untouched, and out of memory. This attribute is called [*lazy evaluation*](https://en.wikipedia.org/wiki/Lazy_evaluation)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Can it be useful?\n",
     "Well, that's a tough one, isn't it? One way I see people saying it's useful is for lists of things that need a function applied to see if they're to be filtered or not.\n",
     "\n",
-    "From the Stack Overflow post [list comprehension vs. lambda + filter](https://stackoverflow.com/questions/3013449/list-comprehension-vs-lambda-filter):\n",
+    "From the Stack Overflow post [list comprehension vs. lambda + filter](https://stackoverflow.com/questions/3013449/list-comprehension-vs-lambda-filter) by user I. J. Kennedy:\n",
     "\n",
     ">A very frequent use case is pulling out the values of some iterable X subject to a predicate P(x):\n",
     "\n",
@@ -323,9 +328,9 @@
     }
    },
    "source": [
-    "Which &mdash; granted, is really elegant and easy to read! &mdash; eliminates the need to recalculate the function `gross_sales` twice, right?\n",
+    "Which is really elegant and easy to read! And it eliminates the need to recalculate the function `gross_sales` twice, right?\n",
     "\n",
-    "I would contend that this, **no**, that's simply not the case, and can be circumvented easily by using `map`. We can map the function first and filter with the list comprehension:"
+    "I would contend that's it's a non-issue, and can be circumvented easily by using `map`. We can just map the function first and filter with a list comprehension:"
    ]
   },
   {
@@ -579,9 +584,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So it would seem that using either `filter(map(func, iterable))` or filtering through a list comprehension gives sensibly the same performance.\n",
+    "So it would seem that using either `filter(map(func, iterable))` and filtering through a list comprehension both basically have the same performance.\n",
     "\n",
-    "It would appear as though, along with `reduce`, the specific uses for `filter` are quite limited, and can be achieved though other means that are:\n",
+    "It would appear as though, along with `reduce`, the specific uses for `filter` are quite limited, if not non-existant. In fact, `filter()`'s effects can be achieved though other means that are:\n",
     "1. Just as readable, and\n",
     "2. Just as fast."
    ]
@@ -591,7 +596,9 @@
    "metadata": {},
    "source": [
     "## Conclusions\n",
-    "I wish the conclusion to our Higher Level Functions in Python didn't close off so abruptly! As we've just seen, there does not seem to be any good uses for `filter` in Python that can't be achieved in ways that are just as readable, and just as fast. I might need to get back to this statement later if I find one, though 😀\n",
+    "I wish the conclusion to our Higher Level Functions in Python didn't end on such a cliff dive! As we've just seen, there does not seem to be any good uses for `filter` in Python that can't be achieved in ways that are just as readable, and just as fast. I might need to get back to this statement later if I find one, though. Do tweet at me if you find compelling evidence suggesting otherwise! 😀\n",
+    "\n",
+    "---\n",
     "\n",
     "To recap, we've taken a look at the Python functions `map()`, `functools.reduce()` and `filter()`, and seen the various ways with which they can make code more readable, or enhance performance in some bottlenecks without sacrificing clarity in the code.\n",
     "\n",
@@ -599,7 +606,7 @@
     "\n",
     "In our [second article](higher-level-functions-python-reduce.html), we took a look at the `reduce()` function, and were able to find a few niche applications where it might be useful, related to function composition and in some ways, metaprogramming.\n",
     "\n",
-    "Finally, we've now seen that the `filter()` function, while elegant and clear in its syntax, can be achieved just as easily with list- or generator comprehensions. Of all the various language elements that Python has inherited from \"functional programming\", it might just be the one that serves no clear use. I find it funny that Guido famously moved `reduce` to the functools module, but that `filter` might have been the clearer candidate!"
+    "Finally, we've now seen that the `filter()` function, while elegant and clear in its syntax, can have its effects recreated just as easily with list or generator comprehensions. Of all the various language elements that Python has inherited from \"functional programming\", it might just be the one that serves no clear use. I find it funny that Guido famously moved `reduce` to the functools module, but that `filter` might have been the clearer candidate!"
    ]
   }
  ],
