--- a/content/df_to_mssql.ipynb
+++ b/content/df_to_mssql.ipynb
@@ -5,11 +5,11 @@
    "metadata": {},
    "source": [
     "# Speed tests for writing to MSSQL from pandas (ODBC)\n",
-    "In this notebook, we'll be playing with various methods of writing data to a Microsoft SQL Server database. Compared to PostgreSQL which I was using previously, the connection is approx. an order of magnitude slower.\n",
+    "In this notebook, we'll be playing with various methods of writing data to a Microsoft SQL Server database. Compared to PostgreSQL, which I was using previously, the connection is approximately an order of magnitude slower. This is apparently a known issue. It boggles the mind why, and I might not be searching deep enough to understand the reasons for this, but it's something I can't work around.\n",
     "\n",
     "Trying to transmit larger volumes of data can also result in errors, as I get memory and connection timeout errors I typically was not having previously.\n",
     "\n",
-    "According to some research, this is due to the ODBC Driver. Whether this is true or not, I do not know. The naive implementation for the `.to_sql()` method from the Pandas docs is\n",
+    "According to some research, this is due to the ODBC Driver. Whether this is true or not, I do not know. The naive implementation for the `.to_sql()` method from the Pandas docs is:\n",
     "\n",
     "    df.to_sql(name,\n",
     "              con,\n",
@@ -30,7 +30,7 @@
     "4. Use `sqlalchemy_turbodbc` instead of vanilla SQLAlchemy\n",
     "5. Use `pymssql` instead of SQLAlchemy\n",
     "\n",
-    "But so far none have been benchmarked. In this article, we will be benchmarking these methods to find the best performance in order to write data from a pandas DataFrame to Microsoft SQL Server.\n",
+    "But so far none have been benchmarked for comparison. In this article, we will be juxtaposing these methods to find the best performance in order to write data from a pandas DataFrame to Microsoft SQL Server.\n",
     "\n",
     "## Failed implementations\n",
     "I also tried the following methods, but there was some issue or reason behind not including them in the list. This includes:\n",
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also needed to `pip install sqlalchemy_turbodbc pymssql`, which thankfully get detected when you load SQLalchemy."
+    "We also needed to `pip install sqlalchemy_turbodbc pymssql`, which thankfully get detected when you load them as SQLAlchemy dialects."
    ]
   },
   {
@@ -186,7 +186,7 @@
        "\n",
        "            setTimeout(function() {\n",
        "                var nbb_cell_id = 3;\n",
-       "                var nbb_formatted_code = \"HOME = expanduser(\\\"~\\\")\\n\\nDRIVER = \\\"ODBC Driver 17 for SQL Server\\\"\\nDSN = \\\"tbsuatsql05\\\"\\nDB = \\\"DS_DEV\\\"\\nTABLE = \\\"perftest\\\"\\n\\nconn_sqlalchemy = sql.create_engine(f\\\"mssql+pyodbc://{DSN}/{DB}?driver={DRIVER}\\\")\\nconn_executemany = sql.create_engine(\\n    f\\\"mssql+pyodbc://{DSN}/{DB}?driver={DRIVER}\\\", fast_executemany=True\\n)\\nconn_turbodbc = sql.create_engine(f\\\"mssql+turbodbc://{DSN}/{DB}?driver={DRIVER}\\\")\\nconn_pymssql = sql.create_engine(f\\\"mssql+pymssql://{DSN}/{DB}\\\")\";\n",
+       "                var nbb_formatted_code = \"HOME = expanduser(\\\"~\\\")\\n\\nDRIVER = \\\"ODBC Driver 17 for SQL Server\\\"\\nDSN = \\\"<REDACTED>\\\"\\nDB = \\\"DS_DEV\\\"\\nTABLE = \\\"perftest\\\"\\n\\nconn_sqlalchemy = sql.create_engine(f\\\"mssql+pyodbc://{DSN}/{DB}?driver={DRIVER}\\\")\\nconn_executemany = sql.create_engine(\\n    f\\\"mssql+pyodbc://{DSN}/{DB}?driver={DRIVER}\\\", fast_executemany=True\\n)\\nconn_turbodbc = sql.create_engine(f\\\"mssql+turbodbc://{DSN}/{DB}?driver={DRIVER}\\\")\\nconn_pymssql = sql.create_engine(f\\\"mssql+pymssql://{DSN}/{DB}\\\")\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
        "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
        "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
